syntax = "proto3";

option csharp_namespace = "Inventory.Product.API.Protos";

service StockProtoService {
  rpc GetStock (GetStockRequest) returns (GetStockResponse);
}

message GetStockRequest {
  string productId = 1;
}

message GetStockResponse {
  int32 stock = 1;
}